<resources>
    <string name="app_name">MusicWiki</string>
    <string name="musicwiki">musicwiki</string>
    <string name="welcome">Welcome!</string>
    <string name="choose_a_genre_to_start_with">Choose a genre to start with</string>
    <string name="pop">POP</string>
    <string name="rock">Rock</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="tracks">Tracks</string>
    <string name="dynamite">Dynamite</string>
    <string name="title">Album - </string>
    <string name="artist">Artist - </string>
    <string name="bts">BTS</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="top_albums">Top Albums</string>
</resources>